cmake_minimum_required(VERSION 3.8)

add_subdirectory("01_Template")
add_subdirectory("02_Undo")
add_subdirectory("03_MultiWindow")
add_subdirectory("04_ShareCamera")
add_subdirectory("05_MultiViewport")
add_subdirectory("06_InteractionStyle")
add_subdirectory("07_FourPaneViewer")
add_subdirectory("08_FastPickTag")
add_subdirectory("09_EventQtSlotConnect")
