cmake_minimum_required(VERSION 3.8)

add_subdirectory("01WinSockServer")
add_subdirectory("02WinSockClient")
add_subdirectory("03CopyVtkWindow")
add_subdirectory("04DebugQEvent")
add_subdirectory("05QEventToQVTKEvent")
add_subdirectory("06QEventToVTKEvent")
add_subdirectory("07WinSockEventServer")
add_subdirectory("08WinSockEventClient")
add_subdirectory("09DebugVTKEvent")

add_subdirectory("11QtFFMPEG")

